--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "nuxt-fontawesome": "^0.4.0",
+    "vue-cli-plugin-pug": "^2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^6.0.0",
+    "sass-loader": "^12.0.0"
+  }
 }
